# eu-emission-factors

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  run-all.sh
data/2020/: manual_matches.csv
data/2020/entsoe_unit_generation/: README.md
data/2020/output/: countries.csv  ignored_powerplants.csv  powerplants.csv
data/2021/: manual_matches.csv
data/2021/entsoe_unit_generation/: README.md
data/2021/output/: countries.csv  ignored_powerplants.csv  powerplants.csv
data/2022/: manual_matches.csv
data/2022/entsoe_unit_generation/: README.md
data/2022/output/: countries.csv  ignored_powerplants.csv  powerplants.csv
data/2023/: manual_matches.csv
data/2023/entsoe_unit_generation/: README.md
data/2023/output/: countries.csv  ignored_powerplants.csv  powerplants.csv
data/2024/: manual_matches.csv
data/2024/entsoe_unit_generation/: README.md
data/2024/output/: countries.csv  ignored_powerplants.csv  powerplants.csv
data/degree_days/: README.md  nrg_chdd_a.tsv
data/verified_ets_emissions/: README.md
src/: file_paths.rs  generation_emission_match.rs  main.rs  preprocess.rs
