[package]
name = "eu-emission-factors"
version = "0.1.0"
edition = "2021"
authors = ["Florian Will"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deunicode = "1.3.3"
csv = "1.2"
zip = { version = "0.6.3", default-features = false, features = ["deflate"] }
calamine = "0.20.0"
serde = { version = "1", features = ["derive"] }